--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="section-title">
           <span>About Me</span>
           <h2>About Me</h2>
-          
+          王淨（英語：Gingle Wang，1998年2月7日—），是出身臺灣臺北的女演員
 
         
     <!-- ======= My Resume Section ======= -->
