--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <h2>About Me</h2>
           王淨（英語：Gingle Wang，1998年2月7日—），是出身臺灣臺北的女演員
           
-          <br>代表作品:關於我害鬼變成家人的那件事  月老  返校
+          <br>代表作品:關於我害鬼變成家人的那件事 , 月老 , 返校
 
         
     <!-- ======= My Resume Section ======= -->
