--- a/index.html
+++ b/index.html
@@ -103,9 +103,7 @@
          
 
         <iframe width="1200" height="700" src="https://www.youtube.com/embed/GZWYUvLcD7M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          <span>My Portfolio</span>
-          <h2>影片</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <span>影片</span>
         </div>
 
         <ul id="portfolio-flters" class="d-flex justify-content-center">
