--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1>actress</h1>
+      <h1>
+favorite actress</h1>
       
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
