--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@ favorite actress</h1>
         </div>
 
         
-    <!-- ======= 其他 ======= -->
+    <!-- =======  ======= -->
     <section id="pricing" class="pricing">
       <div class="container">
 
         <div class="section-title">
-          <span>Pricing</span>
-          <h2>Pricing</h2>
+          <span>其他</span>
+          <h2>其他</h2>
           
           <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
         </div>
