--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@ favorite actress</h1>
       <div class="container">
 
         <div class="section-title">
-          <span>My Portfolio</span>
-          <h2>My Portfolio</h2>
+          <span></span>
+          <h2>其他</h2>
           <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
         </div>
 
