--- a/index.html
+++ b/index.html
@@ -256,14 +256,14 @@ favorite actress</h1>
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Me</h3>
-                  <p>contact@example.com</p>
+                  <p>113021@s.lhvs.tyc.edu.tw</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Me</h3>
-                  <p>+1 5589 55488 55</p>
+                  <p>0905688583</p>
                 </div>
               </div>
             </div>
