--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ favorite actress</h1>
 
         <div class="section-title">
           <span>Contact Me</span>
-          <h2>Contact Me</h2>
+          <h2>contact me if you like</h2>
           <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
         </div>
 
